compute pending state and prevent tracker for changing shipment state when packages haven't been picked up
