# apps/core/purpleserver/core/gateway.py
@@ -193,11 +193,18 @@ class Shipments:
         if not any(results or []):
             raise exceptions.PurplShipApiException(detail=datatypes.ErrorResponse(messages=messages), status_code=status.HTTP_404_NOT_FOUND)
 
+        def process_pending_state(details: datatypes.Tracking):
+            return (
+                len(details.events) == 0 or
+                (len(details.events) == 1 and details.events[0].code == 'CREATED')
+            )
+
         return datatypes.TrackingResponse(
             tracking=(datatypes.Tracking(**{
                 **DP.to_dict(results[0]),
                 'id': f'trk_{uuid.uuid4().hex}',
                 'test_mode': carrier.test,
+                'pending': process_pending_state(results[0])
             }) if any(results) else None),
             messages=messages
         )
